--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "auth",
+  "name": "chat-server",
   "version": "1.0.0",
   "description": "",
   "main": "app.ts",
   "scripts": {
     "dev": "concurrently \"tsc -w\" \"nodemon ./dist/app.js\"",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "pm2 start dist/app.js --name serverapp"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0",
+    "pm2": "^5.3.1",
     "socket.io": "^4.7.5"
   }
 }
