--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsc && vite",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --max-warnings 0",
     "preview": "vite preview"
@@ -26,7 +26,7 @@
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
+    "@types/react": "18.2.39",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
